Komentarze oraz test. Dodanie zależności i bibliotek